// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell: structure default component 1`] = `
<div
  className="style_cell__3Ra6O"
  style={
    Object {
      "height": "25%",
      "width": "25%",
    }
  }
/>
`;

exports[`Cell: structure has children 1`] = `
<div
  className="style_cell__3Ra6O"
  style={
    Object {
      "height": "50%",
      "width": "50%",
    }
  }
>
  contents
</div>
`;

exports[`Cell: structure has size 1`] = `
<div
  className="style_cell__3Ra6O"
  style={
    Object {
      "height": "75%",
      "width": "25%",
    }
  }
/>
`;

exports[`Cell: structure has widget 1`] = `
<div
  className="style_cell__3Ra6O"
  style={
    Object {
      "height": "50%",
      "width": "50%",
    }
  }
>
  <Connect(Widget)
    isActive={true}
    title="my data"
  />
</div>
`;
